--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -7054,7 +7054,8 @@ body, html{
 .search-container.conversation #searchChatContainer.bgfocus{   
     background: rgba(32, 33, 36, 0.1);
     border-radius: 0;
-    opacity: 0;
+    /* opacity: 0; */
+    opacity: 0.5;
 }
 .search-container.conversation #searchChatContainer.bgfocus-override{   
     opacity: 1 !important;
@@ -13160,4 +13161,10 @@ padding-right: 0;
     border: 0;
     outline: 0 !important;
     cursor: pointer;
+}
+.structured-data-outer-wrap a{
+    text-decoration: none;
+}
+.total-structured-data-wrap a{
+    text-decoration: none;
 }
