--- a/findly-builder/src/app/components/synonyms/synonyms.component.html
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.html
@@ -115,7 +115,7 @@
 
         <div class="img-block"*ngIf="!emptyItems"><img class="action_icon" (load)="imageLoad()"src="assets/images/synonyms.empty-svg.svg"></div>
         <ng-container *ngIf="loadImageText">
-            <div class="empty-title">You have not added any synonyms data yet!</div>
+            <div class="empty-title">You have not added any synonyms yet!</div>
             <div class="desc-text"> Synonyms are a set of equivalent words that are considered to expand search queries to improve findability. SearchAssist allows you to define synonym & one-way synonym.
             </div>
             <div class="kr-sg-dropdowns" ngbDropdown [container]="'body'">                                         
